Developed the distribution method to take into account the authName when verifying if tokens have been distributed, so that the user gets a share of tokens per authname. Developed method findLastByUserIdAndAuthName in distribution class. Updated tests to account for the new authname scoped distribution.

--- a/.env.all
+++ b/.env.all
@@ -3,7 +3,8 @@ PGUSER="postgres"
 PGDATABASE="postgres"
 PGPASSWORD="postgrespassword"
 PGPORT=5432
-WSS="ws://172.17.0.1:9944"
+# WSS="ws://172.17.0.1:9944"
+WSS="wss://n1-test.hashed.systems"
 FAUCET_ACCOUNT_SURI="//Alice"
 PORT=3000
 NODE_ENV="dev"
