--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Token faucet for hashed network",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
     "start:dev": "eval \"$(./set-env-dev.sh)\" npx nodemon src/index.js",
     "start:uat": "eval \"$(./set-env-uat.sh)\" npx nodemon src/index.js",
     "start:all": "./start-all.sh",
